# simple_getopt

./: .gitignore  Cargo.toml  README.md
src/: getopt.rs  lib.rs
