[package]
name = "simple_getopt"
version = "0.2.0"
authors = ["timothy adigun <2teezrust@gmail.com>"]
description = "A simple, getopt-style command-line argument parser for Rust. - (YAGP)."
readme = "README.md"
license = "MIT"
repository = "https://github.com/2teez/simple_getopt"
documentation = "https://github.com/2teez/simple_getopt"
keywords = ["cli", "getopt", "argument-parsing", "parser", "utilities"]
categories = [
    "command-line-interface",
    "command-line-utilities",
    "config",
    "development-tools::debugging",
    "parsing",
]
edition = "2021"

[dependencies]
arraylist = "0.2.0"
